[package]
name = "pop3-mail-client"
version = "0.1.0"
edition = "2021"

description = "Pop3 Email Client"
license = "MIT"
homepage = "https://github.com/VanOvermeire/pop3-mail-client"
repository = "https://github.com/VanOvermeire/pop3-mail-client"
readme = "README.md"
keywords = ["POP3", "Email", "Rust"]

[dependencies]
rustls-native-certs = "0.7.0"
rustls = "0.22.1"
